[project]
name = "ia367h-rl"
version = "0.0.1"
description = "Project dedicated to IA367H course at FEEC-Unicamp on 2025S2"
authors = [
  { name = "Gabriel Buzzi Sanches" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ia367h-rl"]
include = ["pyproject.toml", "ia367h-rl/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ia367h-rl"]
force-sort-within-sections = true


[tool.pixi.project]
name = "ia367h-reinforcement-learning"
description = "Project dedicated to IA367H course at FEEC-Unicamp on 2025S2"
version = "0.1.0"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "~=3.10.0"
ipython = "*"
jupyterlab = "*"
matplotlib = "*"
notebook = "*"
numpy = "*"
pandas = "*"
ruff = "*"
scikit-learn = "*"
pip = "*"

[tool.pixi.pypi-dependencies]
python-dotenv = "*"

[tool.pixi.pypi-dependencies.ia367h-rl]
path = "."
editable = true
